--- a/pom.xml
+++ b/pom.xml
@@ -121,8 +121,8 @@
         <maven-checkstyle-plugin.version>3.2.1</maven-checkstyle-plugin.version>
         <jmh.version>1.33</jmh.version>
         <gmaven-plugin.version>1.5</gmaven-plugin.version>
+        <asm.version>9.5</asm.version>
         <checkstyle.fails.on.error>true</checkstyle.fails.on.error>
-
     </properties>
 
     <profiles>
@@ -247,6 +247,11 @@
                 <artifactId>byte-buddy-agent</artifactId>
                 <version>${bytebuddy.version}</version>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.ow2.asm</groupId>
+                <artifactId>asm</artifactId>
+                <version>${asm.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.objenesis</groupId>
